- Changed: In ranked mode vests are now added to the ranks by their maximumLoad supply property, < 101 for all ranks, < 121 for ranks starting at sergeant, < 141 for ranks starting at major and everything above for colonel and better 
- Changed: Added d_number_attack_planes, d_number_attack_choppers, d_number_light_attack_choppers, d_number_attack_uavs, d_noambient_bf_sounds, d_time_until_next_sidemission and d_airai_respawntime to dom_settings table, means, those values can now be changed in the Domination SQL database
- Changed: Transfer data sidemissions should now also work in the TT version
- Fixed: When using earplugs in the TT version a dialog error appeared because of a missing gui baseclass
- Fixed: Heli lift script did break with an error message when the mass of the lift object was lower than the max load of the chopper
- Fixed: When a player changed the TeamSwitch key in the A3 settings when the mission was running the mission didn't pick up the new key
- Fixed: Added missing items like goggles in Virtual Arsenal in ranked mode
- Fixed: Some colors in the game class CfgMarkerColors are stored as string instead of number resulting in broken 3D marker drawing
- Fixed: Target select entire map caused a script error
- Fixed: Possible script error in fn_spectdraw3d.sqf
- Fixed: Side cache mission could break when no building with positions were available or buildings were null
- Fixed: "Data uploaded!" message was displayed when the data upload was iterrupted and not when the data was uploaded in the transfer data sidemisssions
- Fixed: The GMCWG winter version did use some wrong class names for winter units
- Fixed: The Chernarus autumn and winter versions still had the editor placed Teleporter marker at base
- Improved: Boats can now also be used as MHQs (needs empty cargo positions to spawn into a boat and can't load ammo boxes but doesn't need to get deployed)