@@ -59,7 +59,7 @@ private _dallsidemissions = [];
 private _smtypes = ["convoy", "stealflag", "tankdepot", "arrest", "artibase", "deliver", "evac", "radiotower", "prisoners",
 	"stealapc", "stealchopper", "stealtank", "stealplane", "specops", "eliminateofficer", "eliminategovmember", "fuelstation",
 	"transformer", "barracks", "hangar", "eliminatesniper", "cargotruck", "minesland", "minesnaval", "dataterminal", "device",
-	"sam", "cache", "trucks", "artycannon", "gleak"] apply {toLowerANSI _x};
+	"sam", "cache", "trucks", "artycannon", "gleak", "farp"] apply {toLowerANSI _x};
 private _subtypes = ["start", "end", "flag", "tank", "time", "radius"] apply {toLowerANSI _x};
 
 private _infhelper_fnc = {
@@ -582,6 +582,20 @@ __TRACE_1("","_eee")
 					if (hasInterface && {_onesmar # 5 == ""}) then {
 						_onesmar set [5, "2010"];
 						_onesmar set [6, "2011"];
+					};
+				};
+			};
+		};
+		
+		if (_smtype == "farp") exitWith {
+			call {
+				if (_subtype == "") exitWith {
+					if ((_onesmar # 2) isEqualTo []) then {
+						(_onesmar # 2) pushBack (markerPos _curmar);
+					};
+					if (hasInterface && {_onesmar # 5 == ""}) then {
+						_onesmar set [5, "2029"];
+						_onesmar set [6, "2030"];
 					};
 				};
 			};
